# DreamcastControllerUsbPico

./: .gitignore  .gitmodules  CMakeLists.txt  DreamcastController.cpp  DreamcastController.hpp  DreamcastMainNode.cpp  DreamcastMainNode.hpp  DreamcastMainPeripheral.hpp  DreamcastNode.cpp  DreamcastNode.hpp  DreamcastPeripheral.hpp  DreamcastScreen.hpp  DreamcastSubNode.cpp  DreamcastSubNode.hpp  DreamcastSubPeripheral.hpp  LICENSE.md  MapleBus.cpp  MapleBus.hpp  MapleStateBank.hpp  README.md  ScreenData.hpp  UsbControllerDevice.h  UsbGamepad.cpp  UsbGamepad.h  build.sh  build_tests.sh  configuration.h  dreamcast_constants.h  main.c  main.cpp  maple.pio  mapleBusClocking.cpp  mapleBusClocking.hpp  run_tests.sh  usb_descriptors.c  usb_descriptors.h  usb_execution.h  utils.h  very_clean.sh
.github/workflows/: release.yml  test.yml
inc/: DreamcastControllerObserver.hpp  GamepadHost.hpp  MapleBusInterface.hpp  MaplePacket.hpp  MutexInterface.hpp  UsbControllerInterface.hpp  VibrationObserver.hpp  configuration.h  dreamcast_constants.h  dreamcast_structures.h  global_constants.h  utils.h
scripts/: cmd2img.py  img2cmd.py
src/: CMakeLists.txt
src/clientLib/: CMakeLists.txt  DreamcastController.cpp  DreamcastController.hpp  DreamcastKeyboard.hpp  DreamcastLightgun.cpp  DreamcastLightgun.hpp  DreamcastMainPeripheral.cpp  DreamcastMainPeripheral.hpp  DreamcastPeripheral.cpp  DreamcastPeripheral.hpp  DreamcastPeripheralFunction.hpp  DreamcastScreen.cpp  DreamcastScreen.hpp  DreamcastStorage.cpp  DreamcastStorage.hpp  DreamcastTimer.cpp  DreamcastTimer.hpp  DreamcastVibration.hpp
src/coreLib/: CMakeLists.txt  DreamcastController.cpp  DreamcastController.hpp  DreamcastMainNode.cpp  DreamcastMainNode.hpp  DreamcastNode.hpp  DreamcastPeripheral.hpp  DreamcastPeripheralStub.hpp  DreamcastScreen.cpp  DreamcastScreen.hpp  DreamcastSubNode.cpp  DreamcastSubNode.hpp  EndpointTxScheduler.cpp  EndpointTxScheduler.hpp  EndpointTxSchedulerInterface.hpp  PlayerData.hpp  PrioritizedTxScheduler.cpp  PrioritizedTxScheduler.hpp  ScreenData.cpp  ScreenData.hpp  Transmission.hpp  TransmissionScheduler.cpp  TransmissionScheduler.hpp  TransmissionTimeliner.cpp  TransmissionTimeliner.hpp
src/coreLib/parsers/: MaplePassthroughCommandParser.cpp
src/coreLib/peripherals/: DreamcastArGun.cpp  DreamcastArGun.hpp  DreamcastCamera.cpp  DreamcastCamera.hpp  DreamcastController.cpp  DreamcastController.hpp  DreamcastExMedia.cpp  DreamcastExMedia.hpp  DreamcastGun.cpp  DreamcastGun.hpp  DreamcastKeyboard.cpp  DreamcastKeyboard.hpp  DreamcastMicrophone.cpp  DreamcastMicrophone.hpp  DreamcastMouse.cpp  DreamcastMouse.hpp  DreamcastPeripheral.hpp  DreamcastScreen.cpp  DreamcastScreen.hpp  DreamcastStorage.cpp  DreamcastStorage.hpp  DreamcastTimer.cpp  DreamcastTimer.hpp  DreamcastVibration.cpp  DreamcastVibration.hpp
src/hal/: CMakeLists.txt  CriticalSectionMutex.hpp  MapleBus.cpp  MapleBus.hpp  UsbControllerDevice.h  UsbGamepad.cpp  UsbGamepadDreamcastControllerObserver.cpp  UsbGamepadDreamcastControllerObserver.hpp  maple.pio  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_execution.cpp  usb_execution.h
src/hal/MapleBus/: CMakeLists.txt  MapleBus.cpp  MapleBus.hpp  PioProgram.hpp  maple_in.pio  maple_out.pio
src/hal/System/: CMakeLists.txt  Clock.cpp  Clock.hpp  CriticalSectionMutex.cpp  CriticalSectionMutex.hpp  Identification.cpp  Mutex.cpp  Mutex.hpp  NonVolatilePicoSystemMemory.cpp  NonVolatilePicoSystemMemory.hpp  PassiveBuzzer.cpp  PassiveBuzzer.hpp  PicoIdentification.cpp  PicoIdentification.hpp  VolatileSystemMemory.cpp  VolatileSystemMemory.hpp  timing.cpp
src/hal/Usb/: CMakeLists.txt  UsbControllerDevice.h  UsbGamepad.cpp  UsbGamepad.h  usb_descriptors.c  usb_execution.cpp  usb_execution.h
src/hal/Usb/Client/Common/: UsbCdcTtyParser.cpp  UsbCdcTtyParser.hpp  cdc.cpp  cdc.hpp  msc_disk.cpp  msc_disk.hpp
src/hal/Usb/Client/Hid/: CMakeLists.txt  UsbControllerDevice.cpp  UsbControllerDevice.h  UsbGamepad.cpp  UsbGamepad.h  UsbGamepadDreamcastControllerObserver.cpp  UsbGamepadDreamcastControllerObserver.hpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_execution.cpp
src/hal/Usb/Common/: UsbCdcTtyParser.cpp  UsbCdcTtyParser.hpp  cdc.cpp  cdc.hpp  msc_disk.cpp
src/hal/Usb/Hid/: CMakeLists.txt  UsbControllerInterface.hpp  UsbGamepad.cpp  UsbGamepad.h  UsbGamepadDreamcastControllerObserver.cpp  msc_disk.c  msc_disk.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_execution.cpp
src/hal/Usb/Host/: CMakeLists.txt  Dualshock4Handler.hpp  HidHandler.hpp  hid_app.cpp  hid_app.hpp  usb_execution.cpp
src/hal/Usb/Xinput/: CMakeLists.txt  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_execution.cpp  xinput_device.cpp  xinput_device.hpp
src/hal/UsbHid/: CMakeLists.txt  UsbControllerDevice.h  UsbGamepadDreamcastControllerObserver.cpp  UsbGamepadDreamcastControllerObserver.hpp  usb_descriptors.h
src/hostLib/: CMakeLists.txt  DreamcastMainNode.cpp  DreamcastMainNode.hpp  DreamcastNode.hpp  DreamcastSubNode.cpp  PlayerData.hpp  (+13 more)
src/main/: CMakeLists.txt  DreamcastMainNode.cpp  DreamcastSubNode.cpp  MapleBus.hpp  PlayerData.hpp  ScreenData.cpp  UsbControllerDevice.cpp  UsbGamepad.cpp  client.cpp  client_pico_non_volatile_mem.cpp  client_volatile_mem.cpp  configuration.h  host.cpp  main.cpp  tusb_config.h  usb_execution.cpp
src/main/Client/: CMakeLists.txt  I2cDevice.hpp  I2cDriver.cpp  I2cDriver.hpp  Ssd1309.cpp  Ssd1309.hpp  client_keyboard.cpp  client_pico_non_volatile_mem.cpp  client_usb_host.cpp  client_volatile_mem.cpp
src/main/Client/common/: led.cpp  led.hpp
src/main/Host/: CMakeLists.txt  host.cpp
src/test/: CMakeLists.txt  MainNodeTests.cpp  MainPeripheralTests.cpp  MaplePacketTests.cpp  PrioritizedTxSchedulerTests.cpp  SubNodeTests.cpp  TransmissionSchedulerTests.cpp  main.cpp
src/test/mocks/: MockDreamcastControllerObserver.hpp  MockDreamcastPeripheral.hpp  MockMapleBus.hpp  MockMutex.hpp  MockUsbController.hpp  MockedDreamcastControllerObserver.hpp  MockedDreamcastPeripheral.hpp  MockedMapleBus.hpp  MockedMutex.hpp  MockedUsbController.hpp
(+56 files in other folders)
